--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,66 @@
 * {
-    box-sizing: border-box;
+    box-sizing: border-box; 
+       margin: 0;
+    padding: 0;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
+
+    height: 100%;
 }
 
 body {
     display: grid;
     grid-template-rows: 100px 1fr 100px;
-    grid-template-columns: ;
-
+    justify-content: center;
 }
 
-header{
+header,
+footer
+{
     display: flex;
     justify-content: space-around;
-    align-items: stretch;
+    align-items: center;
 }
+
+ul{
+    list-style: none;
+}
+
 nav{
-    display: inline;
-    line-height: 2em;
+    max-width: 500px;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: space-around;
+
 }
 
 main{
+    max-width: 1400px;
+    /* flex: 1 0 auto; */
+
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-flow: row wrap;
 }
 
-section{
-    flex-flow: column;
-    min-width: 200px;
-    flex: auto;
-}
+section{ 
+    border: 1px solid red;
+    flex: 0 0 450px;
 
-/*  */
-footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+    max-width: 500px;
+    height: 300px;
+    min-width: 300px;
+    margin-bottom: 10px;
     padding: 10px;
-    
 }
+}
+
+section :nth-child(1) {
+    /* padding: 10px; */
+}
+section :nth-child(2){
+    /* color: blue; */
+}
+
