--- a/styles/style.css
+++ b/styles/style.css
@@ -36,9 +36,7 @@ nav{
 }
 
 main{
-    max-width: 1400px;
-    /* flex: 1 0 auto; */
-
+    max-width: 1600px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -46,7 +44,9 @@ main{
 }
 
 section{ 
-    border: 1px solid red;
+    border: 1px solid rgb(9, 2, 75);
+    border-radius: 5px;
+    
     flex: 0 0 450px;
 
     max-width: 500px;
@@ -54,13 +54,5 @@ section{
     min-width: 300px;
     margin-bottom: 10px;
     padding: 10px;
-}
-}
-
-section :nth-child(1) {
-    /* padding: 10px; */
-}
-section :nth-child(2){
-    /* color: blue; */
 }
 
