--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 * {
-    box-sizing: border-box; 
-       margin: 0;
+    box-sizing: border-box;
+    margin: 0;
     padding: 0;
 }
 
@@ -16,37 +16,53 @@ body {
 }
 
 header,
-footer
-{
+footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-ul{
+ul {
     list-style: none;
+    padding-left: 20px;
 }
 
-nav{
-    max-width: 500px;
+/* ul:nth-child(1n){
+    padding-bottom: 15px;
+} */
+
+nav {
+
     flex: 1 0 auto;
     display: flex;
     justify-content: space-around;
+    max-width: 500px;
+}
+
+nav a {
+    color: rgb(129, 87, 243);
+    text-decoration: none;
 
 }
 
-main{
-    max-width: 1600px;
+nav a:hover {
+    animation: link 0.4s linear;
+    /* transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+    transform: scale(1.2); */
+}
+
+main {
+
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
+
+    max-width: 1600px;
 }
 
-section{ 
-    border: 1px solid rgb(9, 2, 75);
-    border-radius: 5px;
-    
+section {
+
     flex: 0 0 450px;
 
     max-width: 500px;
@@ -54,5 +70,22 @@ section{
     min-width: 300px;
     margin-bottom: 10px;
     padding: 10px;
+
+    /* box-shadow: 3px 3px 4px rgb(75, 34, 121), -3px -3px 4px rgb(78, 218, 243);
+    border: 2px solid rgb(26, 4, 228);
+    border-radius: 5px; */
 }
 
+
+@keyframes link {
+    from {
+        text-shadow: 1px 1px 5px black;
+
+    }
+
+    to {
+        text-shadow: 1px 1px 5px rgb(248, 3, 3);
+    }
+
+
+}
