--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 /*
 #001219
 #005F73
@@ -25,31 +24,42 @@
 
 html, body {
     height: 100%;
-    /* font-family: Georgia, 'Times New Roman', Times, serif; */
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        background: rgb(0,18,25);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+    background: rgb(0, 18, 25);
 }
 
 body {
     display: grid;
     grid-template-rows: 100px 1fr 100px;
+    grid-template-columns: auto;
+    gap: 20px;
+    grid-auto-columns: minmax(500px, 1400px);
+
     justify-content: center;
+    align-items: center;
 
     color: #94D2BD;
+
+
+    /* grid-template-areas: 
+    "head head"
+    "left right"
+    "foot foot"
+    ; */
+
     /* background: linear-gradient(-45deg, rgba(0,18,25,1) 0%, rgba(0,95,115,1) 16%, rgba(0,18,25,1) 100%); */
     /* background: radial-gradient(circle, rgba(0,18,25,0.1) 0%, rgba(0,95,115,1) 16%, rgba(0,18,25,1) 83%); */
-
-    background: radial-gradient(ellipse farthest-side at left 100px ,rgb(0, 98, 117), transparent);
+    /* background: radial-gradient(ellipse farthest-side at left 100px ,rgb(0, 98, 117), transparent); */
 }
 
-a{
-    color: #EE9B00;
-}
-
-h1,
-h2{
-    color:#E9D8A6;
-}
+/* header{
+    grid-area: head;
+} */
+/* 
+footer{
+    grid-area: foot;
+} */
 
 header,
 footer {
@@ -58,13 +68,7 @@ footer {
     align-items: center;
 }
 
-ul {
-    list-style: none;
-    padding-left: 20px;
-}
-
 nav {
-
     flex: 1 0 auto;
     display: flex;
     justify-content: space-around;
@@ -74,50 +78,81 @@ nav {
 nav a {
     /* color: rgb(129, 87, 243); */
     text-decoration: none;
-
 }
 
 nav a:hover {
     animation: link 0.4s linear;
-
 }
 
 main {
 
-    display: flex;
+    display: grid;
+    grid-template-areas:
+        "left right"
+    ;
+
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+
+    justify-content: space-around;
+    align-items: stretch;
+    max-width: 1400px ;
+
+    /* display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
 
-    max-width: 1600px;
+    max-width: 1600px; */
 }
 
 section {
 
-    flex: 0 0 450px;
+    border: 1px solid #EE9B00;
+
+    /* flex: 0 0 450px;
 
     max-width: 500px;
     height: 300px;
     min-width: 300px;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 10px; */
+
 
     /* box-shadow: 3px 3px 4px rgb(75, 34, 121), -3px -3px 4px rgb(78, 218, 243);
     border: 2px solid rgb(26, 4, 228);
     border-radius: 5px; */
 }
 
-figure{
-    filter: drop-shadow(5px 5px 15px rgb(73, 76, 77));
-   
+
+ul {
+    list-style: none;
+    padding-left: 20px;
 }
 
-.out-path{
-  
+
+figure {
+    filter: drop-shadow(5px 5px 15px rgb(73, 76, 77));
+
+}
+
+.out-path {
+
     clip-path: circle(100px at 50% 50%);
     overflow: hidden;
-    box-shadow: 2px 3px 5px 15px rgba(0,0,0,0.9);
+    box-shadow: 2px 3px 5px 15px rgba(0, 0, 0, 0.9);
 }
+
+a {
+    color: #EE9B00;
+}
+
+h1,
+h2 {
+    color: #E9D8A6;
+}
+
+
 
 @keyframes link {
     from {
