--- a/styles/style.css
+++ b/styles/style.css
@@ -24,8 +24,8 @@
 
 html, body {
     height: 100%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+   
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: rgb(0, 18, 25);
 }
 
@@ -50,16 +50,9 @@ body {
 
     /* background: linear-gradient(-45deg, rgba(0,18,25,1) 0%, rgba(0,95,115,1) 16%, rgba(0,18,25,1) 100%); */
     /* background: radial-gradient(circle, rgba(0,18,25,0.1) 0%, rgba(0,95,115,1) 16%, rgba(0,18,25,1) 83%); */
-    /* background: radial-gradient(ellipse farthest-side at left 100px ,rgb(0, 98, 117), transparent); */
+    background: radial-gradient(ellipse farthest-side at right 10px ,rgb(0, 98, 117), transparent);
 }
 
-/* header{
-    grid-area: head;
-} */
-/* 
-footer{
-    grid-area: foot;
-} */
 
 header,
 footer {
@@ -81,7 +74,7 @@ nav a {
 }
 
 nav a:hover {
-    animation: link 0.4s linear;
+    animation: link 0.8s linear;
 }
 
 main {
@@ -91,7 +84,7 @@ main {
         "left right"
     ;
 
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 10fr;
     gap: 20px;
 
     justify-content: space-around;
@@ -108,20 +101,22 @@ main {
 
 section {
 
-    border: 1px solid #EE9B00;
+    border: 1px solid #0A9396;
+    /* background: linear-gradient(180deg, rgba(0,18,25,1) 0%,rgba(0,18,25,1) 37px, #005F73 40px, #005F73 100%); */
+    /* background: linear-gradient(180deg, #9B2226 0%,#9B2226 37px, #005F73 40px, #005F73 100%); */
 
     /* flex: 0 0 450px;
 
     max-width: 500px;
     height: 300px;
     min-width: 300px;
-    margin-bottom: 10px;
-    padding: 10px; */
+    margin-bottom: 10px;*/
+    padding: 10px; 
 
 
     /* box-shadow: 3px 3px 4px rgb(75, 34, 121), -3px -3px 4px rgb(78, 218, 243);
-    border: 2px solid rgb(26, 4, 228);
-    border-radius: 5px; */
+    border: 2px solid rgb(26, 4, 228);*/
+    border-radius: 1em; 
 }
 
 
@@ -150,18 +145,30 @@ a {
 h1,
 h2 {
     color: #E9D8A6;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding-bottom: 5px;
+   
 }
 
 
 
-@keyframes link {
+/* @keyframes link {
     from {
-        text-shadow: 1px 1px 5px black;
+        text-shadow: none;
     }
 
-    /* to {
-        text-shadow: 1px 1px 5px rgb(248, 3, 3);
-    } */
+     to {
+      
+        border: 2px solid red;
+        padding: 3px;
+        color: red;
+    } 
 
 
-}
+} */
+
+/* nav a:nth-child(1){
+    border: 2px solid red;
+    padding: 3px;
+    color: red;
+} */
